--- a/templates/index.html
+++ b/templates/index.html
@@ -1,36 +1,156 @@
-{% extends 'base/vertical_center.html' %}
+{% extends 'base/skeleton.html' %}
 
 
 {% load staticfiles %}
 
 
-{% block styles %}
+{% block head %}
+
+    <title>{% block title %}ByteRock Classroom{% endblock %}</title>
+    <meta name="description" content="Una libreta de comunicaciones online, disponible en todo momento. Una libreta puede ser olvidada en la casa arruinando la comunicación, con ByteRock Classroom ya no pasará eso.">
+    <meta name="og:title" property="og:title" content="ByteRock Classroom">
+    <meta name="og:description" property="og:description" content="Una libreta de comunicaciones online, disponible en todo momento. Una libreta puede ser olvidada en la casa arruinando la comunicación, con ByteRock Classroom ya no pasará eso.">
+    <meta name="robots" content="index, follow">
+    <link href="classroom.byterock.co" rel="canonical">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css">
+
     <style>
-        body {
+
+        h1 > a {
+            color: inherit;
+            text-decoration: none;
+        }
+
+        h1 > a:hover {
+            color: inherit;
+            text-decoration: none;
+        }
+
+        #header {
             background-color: #f33;
             background-color: #fe9492;
             background-image: url('{% static 'images/landing.background.jpg' %}');
             background-size: cover;
+            padding: 4rem 0;
         }
+
+        #header .container {
+            max-width: 600px;
+        }
+
+        .section__image {
+            background-image: url({% static 'images/classroom.jpg' %});
+            background-size: cover;
+        }
+
     </style>
-{% endblock styles %}
+
+    {% block styles %}{% endblock %}
+
+{% endblock head %}
 
 
-{% block content %}
+{% block body %}
 
-    <div class="text-center p-4">
-        <h1>ByteRock Classroom</h1>
+    <header id="header" class="text-center">
 
-        <br>
+        <div class="container">
 
-        <p class="lead">Controla tus gastos y elimina tus deudas. Con ByteRock Classroom podrás llevar una planificación de como quieres gastar tu dinero. Deja de sentir que el dinero se va de las manos.</p>
+            <h1>ByteRock Classroom</h1>
 
-        <br>
+            <br>
 
-        <p>
+            <p class="lead">Una libreta de comunicaciones online, disponible en todo momento. Mejora la comunicación de tu sala de clases con ByteRock Classroom.</p>
+
+            <br>
+
             <a class="btn btn-lg btn-block btn-outline-dark" href="{% url 'login' %}">iniciar sesión</a>
-            <a class="btn btn-lg btn-block btn-dark" href="{% url 'signup' %}">regístrate</a>
-        </p>
+
+        </div>
+
+    </header>
+
+    <div id="mc_embed_signup" class="py-5 container">
+        <form action="https://byterock.us3.list-manage.com/subscribe/post?u=93b265abc2e208deb796d4317&amp;id=7fd7700b10" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+
+                <h2 class="text-center">Participa en la etapa de prueba</h2>
+
+                <br>
+
+                <div class="form-group mc-field-group">
+                    <label for="mce-EMAIL">Correo electronico</label>
+                    <input type="email" value="" name="EMAIL" class="form-control required email" id="mce-EMAIL">
+                </div>
+
+                <div class="row">
+
+                    <div class="form-group col-sm mc-field-group">
+                        <label for="mce-FNAME">Nombre</label>
+                        <input type="text" value="" name="FNAME" class="form-control required" id="mce-FNAME">
+                    </div>
+
+                    <div class="form-group col-sm mc-field-group">
+                        <label for="mce-LNAME">Apellido</label>
+                        <input type="text" value="" name="LNAME" class="form-control required" id="mce-LNAME">
+                    </div>
+
+                </div>
+
+                <div id="mce-responses" class="clear">
+                    <div class="response" id="mce-error-response" style="display:none"></div>
+                    <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>
+
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_93b265abc2e208deb796d4317_7fd7700b10" tabindex="-1" value=""></div>
+
+                <br>
+
+                <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-lg btn-block btn-dark">participar</button>
+
+            </div>
+        </form>
     </div>
 
+    <section class="section bg-danger d-flex align-items-stretch">
+
+        <div class="flex-grow-1 w-50 d-none d-sm-block section__image"></div>
+
+        <div class="flex-grow-1 w-50 p-5 text-whit">
+
+            <h2 class="section__header pb-5">Porque usar ByteRock Classroom</h2>
+
+            <article class="pb-4">
+                <h4 class="text-white">Registro de estudiantes y apoderados</h4>
+                <p class="text-dark">Todos en un mismo lugar, independiente de la asistencia.</p>
+            </article>
+
+            <article class="pb-4">
+                <h4 class="text-white">Envía una comunicación que llega a todos</h4>
+                <p class="text-dark">Solo debes hacer una comunicación y todos la recibirán. ¿Alguien no llevo la libreta ese día? eso ya no será un problema.</p>
+            </article>
+
+            <article class="pb-4">
+                <h4 class="text-white">La libreta de comunicaciones en todo momento</h4>
+                <p class="text-dark">Necesitas revisar la libreta, pero no la tienes a mano? solo ingresa a ByteRock Classroom y listo.</p>
+            </article>
+
+            <article>
+                <h4 class="text-white">Fechas importantes como pruebas y reuniones</h4>
+                <p class="text-dark">El calendario de actividades siempre actualizado, y con recordatorios para que no olvides nada.</p>
+            </article>
+
+        </div>
+
+    </section>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.min.js"></script>
+
+    {% block scripts %}{% endblock %}
+
+{% endblock body %}
+
+{% block content %}
 {% endblock %}
