--- a/posts/templates/posts/post_confirm_delete.html
+++ b/posts/templates/posts/post_confirm_delete.html
@@ -6,7 +6,12 @@
 {% load i18n %}
 
 
-{% block title %}Gastos{% endblock %}
+{% block title %}Mensajes - {{ block.super }}{% endblock %}
+
+
+{% block header %}
+
+{% endblock header %}
 
 
 {% block content %}
