--- a/posts/templates/posts/post_form.html
+++ b/posts/templates/posts/post_form.html
@@ -45,9 +45,14 @@
 {% endblock menu %}
 
 
-{% block content %}
+{% block header %}
 
-    {% include 'classrooms/classroom_summary.html' with classroom=classroom %}
+    {% include 'base/header.html' with title='Mensajes' subtitle=classroom.name back_url=classroom.get_post_list_url %}
+
+{% endblock header %}
+
+
+{% block content %}
 
     <form class="p-4" method="POST">
 
@@ -60,7 +65,7 @@
         <br>
 
         <p>
-            <button class="btn btn-block btn-success">guardar</button>
+            <button class="btn btn-block btn-success">enviar</button>
             <a href="{{ post.get_detail_url }}" class="btn btn-block btn-outline-secondary">cancelar</a>
         </p>
     </form>
@@ -81,7 +86,8 @@
                     ['bold', 'italic', 'underline'],
                     [{ 'list': 'ordered'}, { 'list': 'bullet' }],
                     [{ 'align': [] }],
-                    ['link', 'image'],
+                    // ['link', 'image'],
+                    ['link'],
                 ],
             }
         });
