--- a/users/templates/users/user_detail.html
+++ b/users/templates/users/user_detail.html
@@ -9,6 +9,11 @@
 {% block title %}Perfil{% endblock %}
 
 
+{% block header %}
+
+{% endblock header %}
+
+
 {% block content %}
 
     <div class="list-group list-group-flush">
