--- a/classrooms/templates/classrooms/classroom_confirm_delete.html
+++ b/classrooms/templates/classrooms/classroom_confirm_delete.html
@@ -6,7 +6,12 @@
 {% load i18n %}
 
 
-{% block title %}Gastos{% endblock %}
+{% block title %}Curso - {{ block.super }}{% endblock %}
+
+
+{% block header %}
+
+{% endblock header %}
 
 
 {% block content %}
