--- a/classrooms/templates/classrooms/classroom_detail.html
+++ b/classrooms/templates/classrooms/classroom_detail.html
@@ -6,12 +6,12 @@
 {% load staticfiles %}
 
 
-{% block title %}Curso{% endblock %}
+{% block title %}Curso - {{ block.super }}{% endblock %}
 
 
 {% block menu %}
 
-    {% if classroom.id %}
+    {% if classroom.id and classroom.creator == request.user %}
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
                 <a href="{% url 'classroom-update' classroom.id %}" class="btn btn-outline-secondary btn-sm">editar</a>
@@ -22,17 +22,24 @@
 {% endblock menu %}
 
 
-{% block content %}
+{% block header %}
 
     {% include 'base/header.html' with title='Curso' subtitle=classroom.name back_url=back_url %}
 
-    <div class="list-group list-group-flush d-flex">
-        <a class="list-group-item list-group-item-action py-2" href="{% url 'post-list' classroom.id %}">
-            Mensajes
-        </a>
-        <a class="list-group-item list-group-item-action py-2" href="{% url 'student-list' classroom.id %}">
-            Estudiantes
-        </a>
+{% endblock header %}
+
+
+{% block content %}
+
+    <div class="card">
+        <div class="list-group list-group-flush d-flex">
+            <a class="list-group-item list-group-item-action py-2" href="{% url 'post-list' classroom.id %}">
+                Mensajes
+            </a>
+            <a class="list-group-item list-group-item-action py-2" href="{% url 'student-list' classroom.id %}">
+                Estudiantes
+            </a>
+        </div>
     </div>
 
 {% endblock content %}
