--- a/parents/templates/parents/parent_list.html
+++ b/parents/templates/parents/parent_list.html
@@ -7,7 +7,7 @@
 {% load thumbnail %}
 
 
-{% block title %}Gastos{% endblock %}
+{% block title %}Apoderados - {{ block.super }}{% endblock %}
 
 
 {% block menu %}
@@ -21,9 +21,14 @@
 {% endblock menu %}
 
 
-{% block content %}
+{% block header %}
 
     {% include 'classrooms/classroom_summary.html' with classroom=classroom %}
+
+{% endblock header %}
+
+
+{% block content %}
 
     {% if parents.exists %}
 
