--- a/posts/templates/posts/post_detail.html
+++ b/posts/templates/posts/post_detail.html
@@ -23,31 +23,38 @@
 {% endblock styles %}
 
 
+{% block header %}
+
+    {% include 'base/header.html' with title='Mensajes' subtitle=classroom.name back_url=classroom.get_post_list_url %}
+
+{% endblock header %}
+
+
 {% block content %}
 
-    {% include 'classrooms/classroom_summary.html' with classroom=classroom %}
+    <div class="card">
+        <div class="list-group list-group-flush">
+            <div class="list-group-item list-group-item-action py-2">
+                <div class="d-flex">
 
-    <div class="list-group list-group-flush">
-        <div class="list-group-item list-group-item-action py-2">
-            <div class="d-flex">
+                    {% thumbnail post.creator.avatar "50x50" crop="top" as avatar %}
+                        <img class="rounded" src="{{ avatar.url }}" width="{{ avatar.width }}" height="{{ avatar.height }}" alt="{{ post.creator }}">
+                    {% empty %}
+                        <img class="rounded" src="https://api.adorable.io/avatars/50/{{ post.creator }}.png" width="50" height="50" alt="{{ post.creator }}">
+                    {% endthumbnail %}
 
-                {% thumbnail post.creator.avatar "50x50" crop="top" as avatar %}
-                    <img class="rounded" src="{{ avatar.url }}" width="{{ avatar.width }}" height="{{ avatar.height }}" alt="{{ post.creator }}">
-                {% empty %}
-                    <img class="rounded" src="https://api.adorable.io/avatars/50/{{ post.creator }}.png" width="50" height="50" alt="{{ post.creator }}">
-                {% endthumbnail %}
-
-                <div class="pl-2">
-                    <small>{{ post.creator }}</small>
-                    <br>
-                    <small>{{ post.creation_timestamp }}</small>
+                    <div class="pl-2">
+                        <small>{{ post.creator }}</small>
+                        <br>
+                        <small>{{ post.creation_timestamp }}</small>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="list-group-item list-group-item-action py-2">
-            <p class="font-weight-bold">{{ post.subject }}</p>
-            <div class="message">{{ post.message|safe }}</div>
+            <div class="list-group-item list-group-item-action py-2">
+                <p class="font-weight-bold">{{ post.subject }}</p>
+                <div class="message">{{ post.message|safe }}</div>
+            </div>
         </div>
     </div>
 
