--- a/students/templates/students/student_detail.html
+++ b/students/templates/students/student_detail.html
@@ -11,69 +11,75 @@
 
 {% block menu %}
 
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            <a href="{% url 'student-update' classroom.id student.id %}" class="btn btn-outline-success btn-sm">editar</a>
-        </li>
-    </ul>
+    {% if classroom.creator == request.user %}
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a href="{% url 'student-update' classroom.id student.id %}" class="btn btn-outline-success btn-sm">editar</a>
+            </li>
+        </ul>
+    {% endif %}
 
 {% endblock menu %}
 
 
+{% block header %}
+
+    {% include 'base/header.html' with title='Estudiante' subtitle=classroom.name back_url=classroom.get_student_list_url %}
+
+{% endblock header %}
+
+
 {% block content %}
 
-    {% include 'base/header.html' with title='Estudiante' subtitle=classroom.name back_url=classroom.get_detail_url %}
+    <div class="card">
+        <div class="list-group list-group-flush">
+            <div class="list-group-item list-group-item-action py-2 text-center">
 
-    <div class="list-group list-group-flush">
-        <div class="list-group-item list-group-item-action py-2 text-center">
+                {% thumbnail student.avatar "100x100" crop="top" as avatar %}
+                    <img class="rounded" src="{{ avatar.url }}" width="{{ avatar.width }}" height="{{ avatar.height }}" alt="{{ student }}">
+                {% empty %}
+                    <img class="rounded" src="https://api.adorable.io/avatars/100/{{ student }}.png" width="100" height="100" alt="{{ student }}">
+                {% endthumbnail %}
 
-            {% thumbnail student.avatar "100x100" crop="top" as avatar %}
-                <img class="rounded" src="{{ avatar.url }}" width="{{ avatar.width }}" height="{{ avatar.height }}" alt="{{ student }}">
-            {% empty %}
-                <img class="rounded" src="https://api.adorable.io/avatars/100/{{ student }}.png" width="100" height="100" alt="{{ student }}">
-            {% endthumbnail %}
+            </div>
 
+            <div class="list-group-item list-group-item-action py-2">
+                <small>Nombre</small>
+                <div class="font-weight-bold">{{ student.first_name|default:'-----' }}</div>
+            </div>
+
+            <div class="list-group-item list-group-item-action py-2">
+                <small>Apellidos</small>
+                <div class="font-weight-bold">{{ student.last_name|default:'-----' }}</div>
+            </div>
+
+            <div class="list-group-item list-group-item-action py-2">
+                <small>Email</small>
+                <div class="font-weight-bold">{{ student.email|default:'-----' }}</div>
+            </div>
         </div>
+    </div>
 
-        <div class="list-group-item list-group-item-action py-2">
-            <small>Nombre</small>
-            <div class="font-weight-bold">{{ student.first_name|default:'-----' }}</div>
-        </div>
+    <br>
 
-        <div class="list-group-item list-group-item-action py-2">
-            <small>Apellidos</small>
-            <div class="font-weight-bold">{{ student.last_name|default:'-----' }}</div>
-        </div>
-
-        <div class="list-group-item list-group-item-action py-2">
-            <small>Email</small>
-            <div class="font-weight-bold">{{ student.email|default:'-----' }}</div>
-        </div>
-
-        <div class="list-group-item list-group-item-action py-2">
-            <div class="d-flex justify-content-between">
-                <div>
-                    <small>Apoderados</small>
-                </div>
-
-                <div>
-                    <a href="{% url 'parent-create' classroom.id student.id %}" class="btn btn-outline-success btn-sm">agregar</a>
-                </div>
+    <div class="card">
+        <div class="card-header">
+            <div class="d-flex justify-content-between align-items-center   ">
+                <span>Apoderados</span>
+                <a href="{% url 'parent-create' classroom.id student.id %}" class="btn btn-outline-success btn-sm">agregar</a>
             </div>
         </div>
 
-        <div class="list-group-item list-group-item-action py-2">
-            <div>
-                {% for parent in student.parents.all %}
-                    <a href="{% url 'parent-detail' classroom.id student.id parent.id %}">
-                        {% thumbnail parent.avatar "50x50" crop="top" as avatar %}
-                            <img class="rounded" src="{{ avatar.url }}" width="{{ avatar.width }}" height="{{ avatar.height }}" alt="{{ parent }}">
-                        {% empty %}
-                            <img class="rounded" src="https://api.adorable.io/avatars/50/{{ parent }}.png" width="50" height="50" alt="{{ parent }}">
-                        {% endthumbnail %}
-                    </a>
-                {% endfor %}
-            </div>
+        <div class="card-body">
+            {% for parent in student.parents.all %}
+                <a href="{% url 'parent-detail' classroom.id student.id parent.id %}">
+                    {% thumbnail parent.avatar "50x50" crop="top" as avatar %}
+                        <img class="rounded" src="{{ avatar.url }}" width="{{ avatar.width }}" height="{{ avatar.height }}" alt="{{ parent }}">
+                    {% empty %}
+                        <img class="rounded" src="https://api.adorable.io/avatars/50/{{ parent }}.png" width="50" height="50" alt="{{ parent }}">
+                    {% endthumbnail %}
+                </a>
+            {% endfor %}
         </div>
     </div>
 
