--- a/students/templates/students/student_list.html
+++ b/students/templates/students/student_list.html
@@ -7,55 +7,64 @@
 {% load thumbnail %}
 
 
-{% block title %}Gastos{% endblock %}
+{% block title %}Estudiantes - {{ block.super }}{% endblock %}
 
 
 {% block menu %}
 
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            <a href="{% url 'student-create' classroom.id %}" class="btn btn-outline-success btn-sm">agregar</a>
-        </li>
-    </ul>
+    {% if classroom.creator == request.user %}
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a href="{% url 'student-create' classroom.id %}" class="btn btn-outline-success btn-sm">agregar</a>
+            </li>
+        </ul>
+    {% endif %}
 
 {% endblock menu %}
 
 
-{% block content %}
+{% block header %}
 
     {% include 'base/header.html' with title='Estudiantes' subtitle=classroom.name back_url=classroom.get_detail_url %}
 
-    {% if students.exists %}
+{% endblock header %}
 
-        <div class="list-group list-group-flush">
 
-            {% for student in students %}
-                <a class="list-group-item list-group-item-action py-2" href="{% url 'student-detail' classroom.id student.id %}">
-                    <div class="d-flex">
-                        <div>
-                            {% thumbnail student.avatar "50x50" crop="top" as avatar %}
-                                <img class="rounded" src="{{ avatar.url }}" width="{{ avatar.width }}" height="{{ avatar.height }}" alt="{{ user }}">
-                            {% empty %}
-                                <img class="rounded" src="https://api.adorable.io/avatars/50/{{ student }}.png" width="50" height="50" alt="{{ student }}">
-                            {% endthumbnail %}
+{% block content %}
+
+    <div class="card">
+        {% if students.exists %}
+
+            <div class="list-group list-group-flush">
+
+                {% for student in students %}
+                    <a class="list-group-item list-group-item-action py-2" href="{% url 'student-detail' classroom.id student.id %}">
+                        <div class="d-flex">
+                            <div>
+                                {% thumbnail student.avatar "50x50" crop="top" as avatar %}
+                                    <img class="rounded" src="{{ avatar.url }}" width="{{ avatar.width }}" height="{{ avatar.height }}" alt="{{ user }}">
+                                {% empty %}
+                                    <img class="rounded" src="https://api.adorable.io/avatars/50/{{ student }}.png" width="50" height="50" alt="{{ student }}">
+                                {% endthumbnail %}
+                            </div>
+                            <div class="pl-2">
+                                <small>Nombre</small>
+                                <div class="font-weight-bold">{{ student.first_name }}</div>
+                            </div>
                         </div>
-                        <div class="pl-2">
-                            <small>Nombre</small>
-                            <div class="font-weight-bold">{{ student.first_name }}</div>
-                        </div>
-                    </div>
-                </a>
-            {% endfor %}
-        </div>
+                    </a>
+                {% endfor %}
+            </div>
 
-    {% else %}
+        {% else %}
 
-        <p class="display-4 text-secondary text-center pt-5">
-            <a href="{% url 'student-create' classroom.id %}" class="btn btn-success btn-sm">comenzar</a>
-        </p>
+            <p class="display-4 text-secondary text-center pt-5">
+                <a href="{% url 'student-create' classroom.id %}" class="btn btn-success btn-sm">comenzar</a>
+            </p>
 
-        <p class="text-secondary text-center p-1">Agrega a tu primer estudiante</p>
+            <p class="text-secondary text-center p-1">Agrega a tu primer estudiante</p>
 
-    {% endif %}
+        {% endif %}
+    </div>
 
 {% endblock content %}
