--- a/templates/index.html
+++ b/templates/index.html
@@ -28,8 +28,7 @@
         }
 
         #header {
-            background-color: #f33;
-            background-color: #fe9492;
+            background-color: #DC3545;
             background-image: url('{% static 'images/landing.background.jpg' %}');
             background-size: cover;
             padding: 4rem 0;
@@ -65,52 +64,27 @@
 
             <br>
 
-            <a class="btn btn-lg btn-block btn-outline-dark" href="{% url 'login' %}">iniciar sesión</a>
+            <div class="row">
+                <div class="col-sm-6 mt-1">
+                    <a class="btn btn-lg btn-block btn-outline-dark" href="{% url 'login' %}">iniciar sesión</a>
+                </div>
+                <div class="col-sm-6 mt-1">
+                    <a class="btn btn-lg btn-block btn-dark" href="{% url 'signup' %}">registrarse</a>
+                </div>
+            </div>
 
         </div>
 
     </header>
 
-    <div id="mc_embed_signup" class="py-5 container">
-        <form action="https://byterock.us3.list-manage.com/subscribe/post?u=93b265abc2e208deb796d4317&amp;id=7fd7700b10" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-            <div id="mc_embed_signup_scroll">
+    <div class="py-5 container">
 
-                <h2 class="text-center">Participa en la etapa de prueba</h2>
+        <h2 class="text-center">Participa en la etapa de prueba</h2>
 
-                <br>
+        <br>
 
-                <div class="form-group mc-field-group">
-                    <label for="mce-EMAIL">Correo electronico</label>
-                    <input type="email" value="" name="EMAIL" class="form-control required email" id="mce-EMAIL">
-                </div>
+        <a class="btn btn-lg btn-block btn-outline-dark" href="{% url 'signup' %}">participar</a>
 
-                <div class="row">
-
-                    <div class="form-group col-sm mc-field-group">
-                        <label for="mce-FNAME">Nombre</label>
-                        <input type="text" value="" name="FNAME" class="form-control required" id="mce-FNAME">
-                    </div>
-
-                    <div class="form-group col-sm mc-field-group">
-                        <label for="mce-LNAME">Apellido</label>
-                        <input type="text" value="" name="LNAME" class="form-control required" id="mce-LNAME">
-                    </div>
-
-                </div>
-
-                <div id="mce-responses" class="clear">
-                    <div class="response" id="mce-error-response" style="display:none"></div>
-                    <div class="response" id="mce-success-response" style="display:none"></div>
-                </div>
-
-                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_93b265abc2e208deb796d4317_7fd7700b10" tabindex="-1" value=""></div>
-
-                <br>
-
-                <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-lg btn-block btn-dark">participar</button>
-
-            </div>
-        </form>
     </div>
 
     <section class="section bg-danger d-flex align-items-stretch">
@@ -151,6 +125,3 @@
     {% block scripts %}{% endblock %}
 
 {% endblock body %}
-
-{% block content %}
-{% endblock %}
