--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,17 +1,17 @@
-{% extends 'base/vertical_center.html' %}
+{% extends 'users/base.html' %}
 
 
 {% load bootstrap4 %}
 
 
-{% block title %}Iniciar sesión{% endblock %}
+{% block title %}Iniciar sesión - {{ block.super }}{% endblock %}
 
 
 {% block content %}
 
     <div class="p-4">
 
-        <h1 class="text-center"><a href="{% url 'index' %}">ByteRock Classroom</a></h1>
+        <h1 class="h2 text-center">Iniciar Sesión</h1>
 
         <br>
 
