Added Google Adsense

--- a/templates/base/skeleton.html
+++ b/templates/base/skeleton.html
@@ -22,6 +22,16 @@
 
     {% block head %}{% endblock %}
 
+    {% if GOOGLE_ADSENSE_ID %}
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({
+                google_ad_client: "{{ GOOGLE_ADSENSE_ID }}",
+                enable_page_level_ads: true
+            });
+        </script>
+    {% endif %}
+
 </head>
 <body>
 
