--- a/templates/base.html
+++ b/templates/base.html
@@ -100,6 +100,16 @@
         {% block content %}{% endblock %}
     </div>
 
+    {% if GOOGLE_ADSENSE_ID %}
+        <div class="container my-4">
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <ins class="adsbygoogle" style="display:block" data-ad-client="{{ GOOGLE_ADSENSE_ID }}" data-ad-slot="4651167392" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+    {% endif %}
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.min.js"></script>
 
