Classroom now is Implicari

--- a/classrooms/templates/classrooms/classroom_list.html
+++ b/classrooms/templates/classrooms/classroom_list.html
@@ -19,7 +19,7 @@
 
 {% block header %}
 
-    {% include 'base/header.html' with title='Cursos' subtitle='Lista de cursos' %}
+    {% include 'base/header.html' with title='Lista de cursos' subtitle='Bienvenido! : )' %}
 
 {% endblock header %}
 
