--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,10 @@
 
 {% block head %}
 
-    <title>{% block title %}ByteRock Classroom{% endblock %}</title>
-    <meta name="description" content="Una libreta de comunicaciones online, disponible en todo momento. Una libreta puede ser olvidada en la casa arruinando la comunicación, con ByteRock Classroom ya no pasará eso.">
-    <meta name="og:title" property="og:title" content="ByteRock Classroom">
-    <meta name="og:description" property="og:description" content="Una libreta de comunicaciones online, disponible en todo momento. Una libreta puede ser olvidada en la casa arruinando la comunicación, con ByteRock Classroom ya no pasará eso.">
+    <title>{% block title %}Implicari{% endblock %}</title>
+    <meta name="description" content="Una libreta de comunicaciones online, disponible en todo momento. Una libreta puede ser olvidada en la casa arruinando la comunicación, con Implicari ya no pasará eso.">
+    <meta name="og:title" property="og:title" content="Implicari">
+    <meta name="og:description" property="og:description" content="Una libreta de comunicaciones online, disponible en todo momento. Una libreta puede ser olvidada en la casa arruinando la comunicación, con Implicari ya no pasará eso.">
     <meta name="robots" content="index, follow">
     <link href="classroom.byterock.co" rel="canonical">
 
@@ -56,11 +56,11 @@
 
         <div class="container">
 
-            <h1>ByteRock Classroom</h1>
+            <h1>Implicari</h1>
 
             <br>
 
-            <p class="lead">Una libreta de comunicaciones online, disponible en todo momento. Mejora la comunicación de tu sala de clases con ByteRock Classroom.</p>
+            <p class="lead">Una libreta de comunicaciones online, disponible en todo momento. Mejora la comunicación de tu sala de clases con Implicari.</p>
 
             <br>
 
@@ -77,13 +77,15 @@
 
     </header>
 
-    <div class="py-5 container">
+    <div class="py-5 my-5 container">
 
         <h2 class="text-center">Participa en la etapa de prueba</h2>
 
         <br>
 
-        <a class="btn btn-lg btn-block btn-outline-dark" href="{% url 'signup' %}">participar</a>
+        <p class="row py-2 my-5">
+            <a class="btn btn-lg btn-outline-dark col-6 offset-3" href="{% url 'signup' %}">participar</a>
+        </p>
 
     </div>
 
@@ -93,7 +95,7 @@
 
         <div class="flex-grow-1 w-50 p-5 text-whit">
 
-            <h2 class="section__header pb-5">Porque usar ByteRock Classroom</h2>
+            <h2 class="section__header pb-5">Porque usar Implicari</h2>
 
             <article class="pb-4">
                 <h4 class="text-white">Registro de estudiantes y apoderados</h4>
@@ -107,7 +109,7 @@
 
             <article class="pb-4">
                 <h4 class="text-white">La libreta de comunicaciones en todo momento</h4>
-                <p class="text-dark">Necesitas revisar la libreta, pero no la tienes a mano? solo ingresa a ByteRock Classroom y listo.</p>
+                <p class="text-dark">Necesitas revisar la libreta, pero no la tienes a mano? solo ingresa a Implicari y listo.</p>
             </article>
 
             <article>
