--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -15,13 +15,19 @@
 
 </style>
 
-<header class="header d-flex text-secondary">
-    {% if back_url %}
-        <a class="py-3 px-4 m-0 d-inline-block h3 header__back" href="{{ back_url }}" title="volver">&#10094;</a>
-    {% endif %}
+<header class="header">
+    <div class="container px-0">
+        <div class="d-flex text-secondary">
+            {% if back_url %}
+                <a class="py-3 px-4 m-0 d-inline-block h3 header__back" href="{{ back_url }}" title="volver">&#10094;</a>
+            {% else %}
+                <a class="py-3 px-4 m-0 d-inline-block h3 header__back" href="{% url 'index' %}" title="volver">&#8962;</a>
+            {% endif %}
 
-    <div class="py-2 px-4 d-inline-block header__title">
-        <small>{{ subtitle }}</small>
-        <h5 class="m-0">{{ title }}</h5>
+            <div class="py-2 px-4 d-inline-block header__title">
+                <small>{{ subtitle }}</small>
+                <h5 class="m-0">{{ title }}</h5>
+            </div>
+        </div>
     </div>
 </header>
