--- a/templates/base/skeleton.html
+++ b/templates/base/skeleton.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#343a40">
-    <title>{% block title %}ByteRock Classroom{% endblock %}</title>
+    <title>{% block title %}Implicari{% endblock %}</title>
 
     {% block head %}{% endblock %}
 
