--- a/templates/base/vertical_center.html
+++ b/templates/base/vertical_center.html
@@ -3,7 +3,7 @@
 
 {% block head %}
 
-    <title>{% block title %}ByteRock Classroom{% endblock %}</title>
+    <title>{% block title %}Implicari{% endblock %}</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css">
 
