--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -17,7 +17,7 @@
 
             {% csrf_token %}
 
-            {% bootstrap_form form show_label=False %}
+            {% bootstrap_form form %}
 
             <br>
 
