--- a/classrooms/templates/classrooms/classroom_detail.html
+++ b/classrooms/templates/classrooms/classroom_detail.html
@@ -24,7 +24,7 @@
 
 {% block header %}
 
-    {% include 'base/header.html' with title='Curso' subtitle=classroom.name back_url=back_url %}
+    {% include 'base/header.html' with title=classroom.name subtitle='Curso' back_url=back_url %}
 
 {% endblock header %}
 
@@ -32,14 +32,81 @@
 {% block content %}
 
     <div class="card">
-        <div class="list-group list-group-flush d-flex">
-            <a class="list-group-item list-group-item-action py-2" href="{% url 'post-list' classroom.id %}">
-                Mensajes
-            </a>
-            <a class="list-group-item list-group-item-action py-2" href="{% url 'student-list' classroom.id %}">
-                Estudiantes
-            </a>
+        <div class="card-header">
+            <div class="d-flex justify-content-between align-items-center   ">
+                <span>Mensajes</span>
+                <a href="{% url 'post-create' classroom.id %}" class="btn btn-outline-success btn-sm">agregar</a>
+            </div>
         </div>
+
+        {% if classroom.posts.exists %}
+
+            <div class="list-group list-group-flush">
+                <a class="list-group-item list-group-item-action py-2" href="{{ classroom.posts.last.get_detail_url }}">
+                    <div class="d-flex justify-content-between">
+                        <small>{{ classroom.posts.last.creator }}</small>
+                        <small>{{ classroom.posts.last.creation_timestamp|date }}</small>
+                    </div>
+                    <div class="font-weight-bold">{{ classroom.posts.last.subject }}</div>
+                </a>
+                <div class="list-group-item text-right py-2">
+                    <a class="btn btn-outline-secondary btn-sm" href="{% url 'post-list' classroom.id %}">ver todos &rarr;</a>
+                </div>
+            </div>
+
+        {% else %}
+
+            <p class="display-4 text-secondary text-center pt-5">
+                <a href="{% url 'student-create' classroom.id %}" class="btn btn-success btn-sm">comenzar</a>
+            </p>
+
+            <p class="text-secondary text-center p-1">Agrega a tu primer estudiante</p>
+
+        {% endif %}
+    </div>
+
+    <br>
+
+    <div class="card">
+        <div class="card-header">
+            <div class="d-flex justify-content-between align-items-center   ">
+                <span>Estudiantes</span>
+                <a href="{% url 'student-create' classroom.id %}" class="btn btn-outline-success btn-sm">agregar</a>
+            </div>
+        </div>
+
+        {% if classroom.students.exists %}
+
+            <div class="list-group list-group-flush">
+
+                {% for student in classroom.students.all %}
+                    <a class="list-group-item list-group-item-action py-2" href="{% url 'student-detail' classroom.id student.id %}">
+                        <div class="d-flex">
+                            <div>
+                                {% thumbnail student.avatar "50x50" crop="top" as avatar %}
+                                    <img class="rounded" src="{{ avatar.url }}" width="{{ avatar.width }}" height="{{ avatar.height }}" alt="{{ user }}">
+                                {% empty %}
+                                    <img class="rounded" src="https://api.adorable.io/avatars/50/{{ student }}.png" width="50" height="50" alt="{{ student }}">
+                                {% endthumbnail %}
+                            </div>
+                            <div class="pl-2">
+                                <small>Nombre</small>
+                                <div class="font-weight-bold">{{ student.first_name }}</div>
+                            </div>
+                        </div>
+                    </a>
+                {% endfor %}
+            </div>
+
+        {% else %}
+
+            <p class="display-4 text-secondary text-center pt-5">
+                <a href="{% url 'student-create' classroom.id %}" class="btn btn-success btn-sm">comenzar</a>
+            </p>
+
+            <p class="text-secondary text-center p-1">Agrega a tu primer estudiante</p>
+
+        {% endif %}
     </div>
 
 {% endblock content %}
