Fixed signup form for use email field

--- a/templates/index.html
+++ b/templates/index.html
@@ -83,9 +83,11 @@
 
         <br>
 
-        <p class="row py-2 my-5">
-            <a class="btn btn-lg btn-outline-dark col-6 offset-3" href="{% url 'signup' %}">participar</a>
-        </p>
+        <div class="row py-2 my-5">
+            <div class="col-sm-6 offset-sm-3">
+                <a class="btn btn-lg btn-block btn-outline-dark" href="{% url 'signup' %}">participar</a>
+            </div>
+        </div>
 
     </div>
 
