--- a/classrooms/templates/classrooms/classroom_form.html
+++ b/classrooms/templates/classrooms/classroom_form.html
@@ -28,8 +28,9 @@
 {% block content %}
 
     <div class="card">
-        <form class="card-body" method="POST">
+        <div class="card-header">{% if classroom.id %}Editar{% else %}Crear{% endif %} curso</div>
 
+        <form class="card-body" method="POST">
             {% csrf_token %}
 
             {% bootstrap_form form %}
