--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -19,7 +19,7 @@
 
             {% csrf_token %}
 
-            {% bootstrap_form form show_label=False %}
+            {% bootstrap_form form %}
 
             <br>
 
