--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -64,7 +64,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-6 offset-3">
+            <div class="col-sm-6 offset-sm-3">
                 {% block content %}{% endblock content %}
             </div>
         </div>
