--- a/users/templates/users/user_form.html
+++ b/users/templates/users/user_form.html
@@ -12,24 +12,27 @@
 
 {% block content %}
 
-    <form class="p-4" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
+    <div class="card">
+        <div class="card-header">Perfil</div>
+        <form class="p-4" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
 
-        <p class="text-center mb-4">
-            {% thumbnail user.avatar "100x100" crop="center" as avatar %}
-                <img class="rounded" src="{{ avatar.url }}" width="{{ avatar.width }}" height="{{ avatar.height }}">
-            {% empty %}
-                <img class="rounded" src="https://api.adorable.io/avatars/50/{{ user }}.png" width="50" height="50" alt="{{ user }}">
-            {% endthumbnail %}
-        </p>
+            <p class="text-center mb-4">
+                {% thumbnail user.avatar "100x100" crop="center" as avatar %}
+                    <img class="rounded" src="{{ avatar.url }}" width="{{ avatar.width }}" height="{{ avatar.height }}">
+                {% empty %}
+                    <img class="rounded" src="https://api.adorable.io/avatars/50/{{ user }}.png" width="50" height="50" alt="{{ user }}">
+                {% endthumbnail %}
+            </p>
 
-        {% bootstrap_form form %}
+            {% bootstrap_form form %}
 
-        <br>
+            <br>
 
-        <button class="btn btn-block btn-success" type="submit">guardar</button>
-        <a class="btn btn-block btn-outline-secondary" href="{% url 'login' %}">cancelar</a>
+            <button class="btn btn-block btn-success" type="submit">guardar</button>
+            <a class="btn btn-block btn-outline-secondary" href="{% url 'login' %}">cancelar</a>
 
-    </form>
+        </form>
+    </div>
 
 {% endblock %}
