--- a/parents/templates/parents/parent_form.html
+++ b/parents/templates/parents/parent_form.html
@@ -7,17 +7,6 @@
 {% block title %}Curso - {{ block.super }}{% endblock %}
 
 
-{% block menu %}
-    {% if parent.id %}
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a href="{% url 'parent-delete' classroom.id student.id parent.id %}" class="btn btn-outline-danger btn-sm">eliminar</a>
-            </li>
-        </ul>
-    {% endif %}
-{% endblock menu %}
-
-
 {% block header %}
 
     {% if parent.id %}
@@ -32,6 +21,7 @@
 {% block content %}
 
     <div class="card">
+        <div class="card-header">{% if parent.id %}Editar{% else %}Crear{% endif %} apoderado</div>
         <form class="card-body" method="POST" enctype="multipart/form-data">
 
             {% csrf_token %}
