--- a/students/templates/students/student_form.html
+++ b/students/templates/students/student_form.html
@@ -20,29 +20,29 @@
 
 {% block header %}
 
-    {% if student.id %}
-        {% include 'base/header.html' with title='Editar estudiante' subtitle=classroom.name back_url=classroom.get_student_list_url %}
-    {% else %}
-        {% include 'base/header.html' with title='Crear estudiante' subtitle=classroom.name back_url=classroom.get_student_list_url %}
-    {% endif %}
+    {% include 'base/header.html' with title=classroom.name subtitle='Curso' back_url=back_url %}
 
 {% endblock header %}
 
 
 {% block content %}
 
-    <form class="card p-4" method="POST" enctype="multipart/form-data">
+    <div class="card">
+        <div class="card-header">{% if student.id %}Editar{% else %}Crear{% endif %} estudiante</div>
+        <form class="p-4" method="POST" enctype="multipart/form-data">
 
-        {% csrf_token %}
+            {% csrf_token %}
 
-        {% bootstrap_form form %}
+            {% bootstrap_form form %}
 
-        <br>
+            <br>
 
-        <p>
-            <button class="btn btn-block btn-success">guardar</button>
-            <a href="{{ classroom.get_student_list_url }}" class="btn btn-block btn-outline-secondary">cancelar</a>
-        </p>
-    </form>
+            <p>
+                <button class="btn btn-block btn-success">guardar</button>
+                <a href="{{ classroom.get_student_list_url }}" class="btn btn-block btn-outline-secondary">cancelar</a>
+            </p>
+
+        </form>
+    </div>
 
 {% endblock content %}
