Removed deprecated function: {% load staticfiles %}

--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -3,7 +3,7 @@
 
 {% load bootstrap4 %}
 {% load thumbnail %}
-{% load staticfiles %}
+{% load static %}
 
 
 {% block title %}Eventos - {{ block.super }}{% endblock %}
