--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -52,7 +52,7 @@
                 <a href="{% url 'post-create' classroom.id %}" class="btn btn-success btn-sm">comenzar</a>
             </p>
 
-            <p class="text-secondary text-center pt-1 pb-2">Crea tu primer mensaje</p>
+            <p class="text-secondary text-center pt-1 pb-2">Envia tu primer mensaje</p>
 
         {% else %}
 
