--- a/students/templates/students/student_confirm_delete.html
+++ b/students/templates/students/student_confirm_delete.html
@@ -11,7 +11,7 @@
 
 {% block header %}
 
-    {% include 'base/header.html' with title=classroom.name subtitle='Curso' back_url=classroom.get_student_list_url %}
+    {% include 'base/header.html' with title=classroom.name subtitle='Curso' back_url=back_url %}
 
 {% endblock header %}
 
